--- a/antlr/sequence/BUILD.bazel
+++ b/antlr/sequence/BUILD.bazel
@@ -5,7 +5,8 @@ load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")
 go_lint_config(
     name = "go_lint_config",
     exclude_filter = [
-        "sequence_parser.go",
+        "_parser.go",
+        "_lexer.go",
     ],
     visibility = [
         "//visibility:public",
